add webprofileincontainer for running Web Profile in specified JBOSS_HOME
Signed-off-by: Scott Marlow <smarlow@redhat.com>